@@ -1,3 +1,7 @@
+2009-09-19  Glenn Morris  <rgm@gnu.org>
+
+	* calc/calcalg2.el (var): Define for compiler.
+
 2009-09-19  Chong Yidong  <cyd@stupidchicken.com>
 
 	* emacs-lisp/advice.el (ad-get-argument, ad-set-argument): Doc
